# Zwonk

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: index.html  package.json
dashboard/src/: App.tsx  mockData.ts  types.ts
dashboard/src/components/: MoodCard.tsx  SignalPanel.tsx  WojakFeed.tsx
tests/: conftest.py  test_helpers.py  test_models.py  test_scorer.py  test_signals.py  test_tracker.py
zwonk/: __init__.py  models.py  scorer.py  signals.py  tracker.py
zwonk/utils/: helpers.py
