[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "zwonk"
version = "0.1.0"
description = "Solana meme token emotional sentiment engine — Wojak knows the cycle"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["zwonk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
